[package]
name = "examples"
version = "0.0.1"
publish = false
edition = "2018"
license-file = "../LICENSE"
repository = "https://github.com/moznion/radius-rs"

[dev-dependencies]
radius = { version = "0.0.1", path = "../radius" }
log = "0.4.11"
env_logger = "0.8.2"
tokio = { version = "0.3.4", features = ["signal", "net"] }
async-trait = "0.1.42"

[[example]]
name = "server"
path = "server.rs"

[[example]]
name = "client"
path = "client.rs"

