[package]
name = "examples"
version = "0.4.0"
publish = false
edition = "2021"
license-file = "../LICENSE"
repository = "https://github.com/moznion/radius-rs"

[dev-dependencies]
radius = { version = "0.4.0", path = "../radius" }
log = "0.4.11"
env_logger = "0.8.2"
tokio = { version = "1.0.1", features = ["signal", "net"] }
async-trait = "0.1.42"

[[example]]
name = "server"
path = "server.rs"

[[example]]
name = "client"
path = "client.rs"

