[package]
name = "radius"
version = "0.1.0"
authors = ["moznion <moznion@gmail.com>"]
edition = "2018"
description = "An async/await native implementation of the RADIUS server and client for Rust."
license = "MPL-2.0"
readme = "../README.md"
repository = "https://github.com/moznion/radius-rs"
homepage = "https://github.com/moznion/radius-rs"
documentation = "https://docs.rs/radius"
categories =  ["network-programming"]
keywords = ["radius", "async"]

[dependencies]
md5 = "0.7.0"
chrono = "0.4"
rand = "0.8.1"
num_enum = "0.5.1"
thiserror = "1.0"
log = "0.4.13"
tokio = { version = "1.0.1", features = ["full"] }
async-trait = "0.1.42"
