[package]
name = "radius"
version = "0.3.1"
authors = ["moznion <moznion@gmail.com>"]
edition = "2021"
description = "An async/await native implementation of the RADIUS server and client for Rust."
license = "MIT"
readme = "../README.md"
repository = "https://github.com/moznion/radius-rs"
homepage = "https://github.com/moznion/radius-rs"
documentation = "https://docs.rs/radius"
categories =  ["network-programming"]
keywords = ["radius", "async"]

[dependencies]
md5 = { version = "0.7.0", optional = true}
openssl = { version = "0.10", optional = true }
chrono = "0.4"
rand = "0.8.5"
num_enum = "0.5.1"
thiserror = "1.0"
log = "0.4.17"
tokio = { version = "1.6.1", features = ["full"] }
async-trait = "0.1.50"

[features]
default = ["md5"]
openssl = ["dep:openssl"]
md5 = ["dep:md5"]
